add support for iris_ondevice face verification (not very safe)
